# DJM_C_HackerRankSolutions

./: CMakeLists.txt  README.md
solutions/: ArraysReversal.c  BitwiseOperator.c  Boxesthroughatunnel.c  CalculateTheNthterm.c  ConditionalStatements.c  DigitFrequency.c  DynamicArrayinC.c  ForLoop.c  FunctionsinC.c  HelloWorld.c  PermutationsofStrings.c  PlayingWithCharacters.c  PointerinC.c  PostTransition.c  PrintingPatternUsingLoop.c  PrintingTokens.c  QueryingtheDocument.c  SmallTriangles_LargeTriangles.c  SortingArrayofStrings.c  StructuringtheDocument.c  StudentsMarksSum.c  SumAndDifferenceofTwoNumbers.c  SumofDigitsofFiveDigitNumber.c  VariadicfunctionsinC.c  _1DArrays.c
