cmake_minimum_required(VERSION 3.19)
project(HackerRankSolutions C)

set(CMAKE_C_STANDARD 99)
#to execute the file substitute the main.c with corresponding .c file and then execute
add_executable(HackerRankSolutions main.c #[[solutions/HelloWorld.c solutions/PlayingWithCharacters.c solutions/SumAndDifferenceofTwoNumbers.c solutions/FunctionsinC.c solutions/PointerinC.c solutions/ConditionalStatements.c solutions/ForLoop.c solutions/SumofDigitsofFiveDigitNumber.c solutions/BitwiseOperator.c solutions/PrintingPatternUsingLoop.c solutions/_1DArrays.c solutions/ArraysReversal.c solutions/PrintingTokens.c solutions/DigitFrequency.c solutions/DynamicArrayinC.c solutions/CalculateTheNthterm.c solutions/StudentsMarksSum.c solutions/SortingArrayofStrings.c solutions/PermutationsofStrings.c solutions/VariadicfunctionsinC.c solutions/QueryingtheDocument.c solutions/Boxesthroughatunnel.c solutions/SmallTriangles_LargeTriangles.c solutions/PostTransition.c solutions/StructuringtheDocument.c]])